# horse

./: .dockerignore  .gitignore  .gitmodules  Dockerfile  README.md  pyproject.toml
.docker/: docker-compose.yml
.docker/api/: Dockerfile
.docker/mlflow/: Dockerfile
infra/envs/dev/: backend.tf  data.tf  locals.tf  main.tf  outputs.tf  variables.tf  version.tf
infra/envs/dev/modules/s3/: locals.tf  main.tf  output.tf  variables.tf
src/: run.py
src/api/v1/: server.py
src/api/v1/endpoints/: core.py  health.py
src/api/v1/schemas/: common.py  health.py  router.py
src/core/etl/: extractor.py  generator.py
src/core/fel/: extractor.py  schema.py
tst/unit/: test_endpoints.py
