[project]
name = "horse"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "fastapi>=0.116.1",
    "pandas>=2.0.3",
    "pydantic>=2.10.6",
    "pyyaml>=6.0.2",
    "tiktoken>=0.7.0",
    "uvicorn[standard]>=0.33.0",
]

[dependency-groups]
dev = [
    "black>=24.8.0",
    "pylint>=3.2.7",
    "pytest>=8.3.5",
    "pytest-cov>=5.0.0",
]
